Added Component v2 all over the bot

--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "type": "git",
     "url": "git+https://github.com/ThisDudeBoy"
   },
-  "author": "AlexM (ThisDudeBoy)",
+  "author": "Npg",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/ThisDudeBoy"
